--- a/pages/404.mdx
+++ b/pages/404.mdx
@@ -3,14 +3,16 @@ title: "Page not found"
 ---
 
 
+
 import Image from "next/image";
+import Link from "next/link";
 
 export const RootComponent = () => {
     return (
         <article
             className="w-full overflow-x-hidden break-words nextra-content flex min-h-[calc(100vh-var(--nextra-navbar-height))] min-w-0 justify-center pb-8 pr-[calc(env(safe-area-inset-right)-1.5rem)]">
             <main className="flex w-full my-auto">
-                <div className="flex flex-col m-auto">
+                <div className="flex flex-col m-auto gap-4">
                     <h1 className="text-3xl font-bold text-center">
                         404 - Page not found
                     </h1>
@@ -20,15 +22,17 @@ export const RootComponent = () => {
                             alt="Nyan Cat"
                             width={500}
                             height={500}
-                            className="mt-8 rounded-xl"/>
+                            className="rounded-xl"/>
                     </div>
-                    <h1 className="text-2xl font-bold text-center">
-                        <i>[go back](./)</i>
-                    </h1>
+                    <Link
+                        href="/"
+                        className="nextra-card front-button text-lg p-2 group w-fit">
+                        <span>Go back</span>
+                    </Link>
                 </div>
             </main>
         </article>
     )
 }
 
-<RootComponent />
+<RootComponent/>
