--- a/pages/docs/configuration/locale-translations.mdx
+++ b/pages/docs/configuration/locale-translations.mdx
@@ -44,7 +44,7 @@ Here is a list of all the locales that are currently available in SkinsRestorer.
 |---------------------|--------------|---------------------|
 | German              | `de`         | `locale_de.json`    |
 | French              | `fr`         | `locale_fr.json`    |
-| Chinese Simplified  | `zh_hk`      | `locale_zh_hk.json` |
+| Chinese Simplified  | `zh_cn`      | `locale_zh_cn.json` |
 | Chinese Traditional | `zh_tw`      | `locale_zh_tw.json` |
 | Polish              | `pl`         | `locale_pl.json`    |
 | Norwegian Bokmål    | `no`         | `locale_no.json`    |
