Update old links

--- a/pages/docs/features/custom-skins.mdx
+++ b/pages/docs/features/custom-skins.mdx
@@ -28,7 +28,7 @@ Run `/sr createcustom <name> <url> <variant>` to generate a custom skin by URL.
 ### Skinfile Generator
 
 We have built a web app that allows you to convert .png skin files to .customskin files that are used by SkinsRestorer.
-You can find the Skinfile Generator on [our domain](https://generator.skinsrestorer.net).
+You can find the Skinfile Generator on [our website](/generator).
 
 <Callout type="warning" emoji="⚠️">
     The Skinfile Generator only works if you use file storage. MySQL users should use the `/sr createcustom` command.
@@ -40,7 +40,7 @@ so you can host it yourself if you want to.
 Steps to generate a custom skin using the Skinfile Generator:
 
 1. Get your skin file in .png format
-2. Go to the website (https://generator.skinsrestorer.net)
+2. Go to [the website](/generator)
 3. Hit browse and select your skin
 4. Fill in the skin name in the optional skin name field (Make sure it is lowercase and does not contain a space)
 5. Hit `Upload!`
