--- a/pages/docs/integrations/avatar-url.mdx
+++ b/pages/docs/integrations/avatar-url.mdx
@@ -5,7 +5,7 @@ import {Callout, Steps} from "nextra-theme-docs";
 Do you want to show a player's head in, for example, a Discord message sent by a plugin? This is possible with SkinsRestorer!
 
 <Callout type="info" emoji="ℹ️">
-    We also have a guide specifically [for DiscordSRV](/docs/integrations/discordsrv)
+    We also have guides specifically for [DiscordSRV](/docs/integrations/discordsrv) or [Discord-MC-Chat](/docs/integrations/discord-mc-chat).
 </Callout>
 
 <Steps>
