--- a/pages/docs/integrations/discord-mc-chat.mdx
+++ b/pages/docs/integrations/discord-mc-chat.mdx
@@ -8,7 +8,7 @@ SkinsRestorer skins can be used for Discord-MC-Chat messages using the textures 
 
 <Steps>
     ### Prepare your server
-    Ensure [SkinsRestorer](/docs/installation), [Discord-MC-Chat](https://modrinth.com/mod/discord-mc-chat) are installed on your server, are the latest version and are working correctly.
+    Ensure [SkinsRestorer](/docs/installation) and [Discord-MC-Chat](https://modrinth.com/mod/discord-mc-chat) are installed on your server, are the latest version and are working correctly.
 
     ### Configure Discord-MC-Chat
     Open your Discord-MC-Chat `./config/discord-mc-chat.json` and search for the `avatarApi` section.
