--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -10,7 +10,7 @@ offline mode.
 
 Role-play servers, large networks, and even small video recording servers use SkinsRestorer.
 
-You don't need a permission plugin to control commands for your players, with SkinRestorer's plug-n-play philosophy.
+You don't need a permission plugin to control commands for your players, with SkinsRestorer's plug-n-play philosophy.
 
 ### Special features
 
