Update api usage for nextra 3

--- a/pages/docs/configuration.mdx
+++ b/pages/docs/configuration.mdx
@@ -1,4 +1,4 @@
-import {Card, Cards} from "nextra-theme-docs";
+import {Cards} from "nextra/components";
 import {ChatBubbleLeftEllipsisIcon, Cog6ToothIcon, CommandLineIcon} from "@heroicons/react/24/solid";
 
 # Setting up SkinsRestorer
@@ -10,28 +10,28 @@ While SkinsRestorer works out-of-the-box, you might want to change some settings
 In these sections, you can read on the different aspects of the SkinsRestorer configuration.
 
 <Cards>
-    <Card
+    <Cards.Card
         icon={
             <Cog6ToothIcon/>
         }
         title="Configuration Options"
         href="/docs/configuration/options"
     >
-    </Card>
-    <Card
+    </Cards.Card>
+    <Cards.Card
         icon={
             <CommandLineIcon/>
         }
         title="Commands and Permissions"
         href="/docs/configuration/commands-permissions"
     >
-    </Card>
-    <Card
+    </Cards.Card>
+    <Cards.Card
         icon={
             <ChatBubbleLeftEllipsisIcon/>
         }
         title="Locale and Translations"
         href="/docs/configuration/locale-translations"
     >
-    </Card>
+    </Cards.Card>
 </Cards>
