--- a/pages/docs/features.mdx
+++ b/pages/docs/features.mdx
@@ -1,4 +1,4 @@
-import {Card, Cards} from "nextra-theme-docs";
+import {Cards} from "nextra/components";
 import {
     GlobeAltIcon,
     PhotoIcon,
@@ -14,28 +14,28 @@ SkinsRestorer has multiple features that you can use to get a better experience 
 In these sections, you can on different aspects of SkinsRestorer and how to use them.
 
 <Cards>
-    <Card
+    <Cards.Card
         icon={
             <UserIcon/>
         }
         title="Custom Skins"
         href="/docs/features/custom-skins"
     >
-    </Card>
-    <Card
+    </Cards.Card>
+    <Cards.Card
         icon={
             <GlobeAltIcon/>
         }
         title="Skin URL"
         href="/docs/features/skin-url"
     >
-    </Card>
-    <Card
+    </Cards.Card>
+    <Cards.Card
         icon={
             <PhotoIcon/>
         }
         title="Skin Design"
         href="/docs/features/skin-design"
     >
-    </Card>
+    </Cards.Card>
 </Cards>
