--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -28,9 +28,9 @@ custom `.png` skins via a web interface, by utilizing the awesome [MineSkin](htt
 
 ## Getting started
 
-import {Card} from 'nextra-theme-docs'
+import {Cards} from "nextra/components"
 
 <div className="mt-4">
-    <Card arrow title="Install SkinsRestorer" href="/docs/installation">
-    </Card>
+    <Cards.Card arrow title="Install SkinsRestorer" href="/docs/installation">
+    </Cards.Card>
 </div>
