--- a/pages/docs/development/api.mdx
+++ b/pages/docs/development/api.mdx
@@ -1,4 +1,4 @@
-import {Callout, Tab, Tabs} from "nextra-theme-docs";
+import {Callout, Tabs} from "nextra/components";
 
 # SkinsRestorer API
 
@@ -23,7 +23,7 @@ Latest Version (Without the v):
 ![Latest Version](https://img.shields.io/github/v/tag/SkinsRestorer/SkinsRestorer?label=version)
 
 <Tabs items={['Maven', 'Gradle (Groovy)', 'Gradle (Kotlin)']}>
-    <Tab>
+    <Tabs.Tab>
         Add the following repository and dependency to your `pom.xml` file:
 
         ```xml
@@ -44,8 +44,8 @@ Latest Version (Without the v):
             </dependency>
         </dependencies>
         ```
-    </Tab>
-    <Tab>
+    </Tabs.Tab>
+    <Tabs.Tab>
         Add the following repository and dependency to your `build.gradle` file:
 
         ```groovy
@@ -61,8 +61,8 @@ Latest Version (Without the v):
             compileOnly 'net.skinsrestorer:skinsrestorer-api:VERSION'
         }
         ```
-    </Tab>
-    <Tab>
+    </Tabs.Tab>
+    <Tabs.Tab>
         Add the following repository and dependency to your `build.gradle.kts` file:
 
         ```kotlin
@@ -77,7 +77,7 @@ Latest Version (Without the v):
             compileOnly("net.skinsrestorer:skinsrestorer-api:VERSION")
         }
         ```
-    </Tab>
+    </Tabs.Tab>
 </Tabs>
 
 ## Add SkinsRestorer as a dependency
@@ -91,28 +91,28 @@ The process below may vary depending on your build configuration.
 (E.g., you have a build plugin that generates plugin configs)
 
 <Tabs items={['Bukkit', 'BungeeCord', 'Velocity']}>
-    <Tab>
+    <Tabs.Tab>
         Add the following dependency to your `plugin.yml` file:
 
         ```yml
         softdepend: [ "SkinsRestorer" ]
         ```
-    </Tab>
-    <Tab>
+    </Tabs.Tab>
+    <Tabs.Tab>
         BungeeCord uses `softDepends` instead of `softdepend` like Bukkit/Spigot.
         Add the following dependency to your `bungee.yml` or `plugin.yml` file:
 
         ```yml
         softDepends: [ "SkinsRestorer" ]
         ```
-    </Tab>
-    <Tab>
+    </Tabs.Tab>
+    <Tabs.Tab>
         Add the following dependency to your plugin entry file annotation:
 
         ```java
         @Plugin(dependencies = {@Dependency(id = "skinsrestorer", optional = true)})
         ```
-    </Tab>
+    </Tabs.Tab>
 </Tabs>
 
 ## When using BungeeCord/Velocity?
