Add editorconfig and add file names

--- a/pages/docs/installation/bungeecord.mdx
+++ b/pages/docs/installation/bungeecord.mdx
@@ -36,14 +36,12 @@ In this section, you can read how to set up SkinsRestorer on your BungeeCord pro
 
     Ensure that you have the done the following settings:
 
-    `spigot.yml`:
-    ```yaml
+    ```yaml filename="spigot.yml"
     settings:
       bungeecord: true
     ```
 
-    `server.properties`:
-    ```properties
+    ```properties filename="server.properties"
     online-mode=false
     ```
 
