--- a/pages/docs/development/api.mdx
+++ b/pages/docs/development/api.mdx
@@ -26,7 +26,7 @@ Latest Version (Without the v):
     <Tabs.Tab>
         Add the following repository and dependency to your `pom.xml` file:
 
-        ```xml
+        ```xml filename="pom.xml"
         <repositories>
             <repository>
                 <id>codemc</id>
@@ -48,7 +48,7 @@ Latest Version (Without the v):
     <Tabs.Tab>
         Add the following repository and dependency to your `build.gradle` file:
 
-        ```groovy
+        ```groovy filename="build.gradle"
         repositories {
             maven {
                 name 'codemc'
@@ -65,7 +65,7 @@ Latest Version (Without the v):
     <Tabs.Tab>
         Add the following repository and dependency to your `build.gradle.kts` file:
 
-        ```kotlin
+        ```kotlin filename="build.gradle.kts"
         repositories {
             maven("https://repo.codemc.org/repository/maven-public/") {
                 name = "codemc"
@@ -94,7 +94,7 @@ The process below may vary depending on your build configuration.
     <Tabs.Tab>
         Add the following dependency to your `plugin.yml` file:
 
-        ```yml
+        ```yml filename="plugin.yml"
         softdepend: [ "SkinsRestorer" ]
         ```
     </Tabs.Tab>
@@ -102,14 +102,14 @@ The process below may vary depending on your build configuration.
         BungeeCord uses `softDepends` instead of `softdepend` like Bukkit/Spigot.
         Add the following dependency to your `bungee.yml` or `plugin.yml` file:
 
-        ```yml
+        ```yml filename="bungee.yml"
         softDepends: [ "SkinsRestorer" ]
         ```
     </Tabs.Tab>
     <Tabs.Tab>
         Add the following dependency to your plugin entry file annotation:
 
-        ```java
+        ```java filename="YourPluginClass.java"
         @Plugin(dependencies = {@Dependency(id = "skinsrestorer", optional = true)})
         ```
     </Tabs.Tab>
