Add logs file name

--- a/pages/docs/installation/velocity.mdx
+++ b/pages/docs/installation/velocity.mdx
@@ -38,7 +38,7 @@ In this section, you can read how to set up SkinsRestorer on your Velocity proxy
 
     ### Ensure the plugin is in Proxy Mode on the servers
     In every Spigot server, check the server logs for the messages like these:
-    ```
+    ```text filename="logs/latest.log"
     [SkinsRestorer] ----------------------------------------------
     [SkinsRestorer]     +==================+
     [SkinsRestorer]     |   SkinsRestorer  |
