--- a/pages/docs/integrations/discord-mc-chat.mdx
+++ b/pages/docs/integrations/discord-mc-chat.mdx
@@ -14,13 +14,13 @@ SkinsRestorer skins can be used for Discord-MC-Chat messages using the textures 
     Open your Discord-MC-Chat `./config/discord-mc-chat.json` and search for the `avatarApi` section.
     The config setting looks like this:
 
-    ```json filename="./config/discord-mc-chat.json"
+    ```json filename="config/discord-mc-chat.json"
     "avatarApi": "https://mc-heads.net/avatar/{player_uuid}.png",
     ```
 
     You have to replace it with the following:
 
-    ```json filename="./config/discord-mc-chat.json"
+    ```json filename="config/discord-mc-chat.json"
     "avatarApi": "https://mc-heads.net/avatar/{player_textures}.png",
     ```
 
