--- a/pages/docs/troubleshooting/firewall.mdx
+++ b/pages/docs/troubleshooting/firewall.mdx
@@ -42,7 +42,7 @@ You also need to make sure that the port `53` of your DNS server you are using i
 When you only have access to a panel like Multicraft, Pterodactyl or Pelican, you aren't able to change firewall settings yourself.
 Use the below template to create a ticket / send an E-Mail to your Minecraft hosting provider and ask them to open the required ports.
 
-```text
+```ansi
 Title: Firewall issues
 
 Dear Mc-Service provider,
