--- a/pages/docs/troubleshooting/incompatibility-list.mdx
+++ b/pages/docs/troubleshooting/incompatibility-list.mdx
@@ -26,8 +26,8 @@ This way you can identify the plugin that might cause the issue.
 
 ## Server plugins that need config change
 
-* `FastLogin` -> FastLogin `config.yml` -> `forwardSkin: false`
-* `MundoSK` -> MundoSK `config.yml` -> `usecustomskins: false`
+* `FastLogin` -> FastLogin `config.yml` -> `forwardSkin: false{:yaml}`
+* `MundoSK` -> MundoSK `config.yml` -> `usecustomskins: false{:yaml}`
 
 ## Server plugin incompatibility
 
