Add info that URLs should be quoted

--- a/pages/docs/features/skin-url.mdx
+++ b/pages/docs/features/skin-url.mdx
@@ -33,15 +33,17 @@ This time we are going to upload your custom skin format to imgur. Follow the fo
 
     ![Dropping skin image into imgur](/assets/imgur/upload-image.png)
 
-    ### Getting the url
+    ### Getting the URL
 
-    The Skin URL **__must__** end with `.png`, so make sure that you have the right url!
+    The Skin URL **__must__** end with `.png`, so make sure that you have the right URL!
 
-    Below you can see the skin I just uploaded to imgur, now right-click on the image and hit "Copy image url"
+    Below you can see the skin I just uploaded to imgur, now right-click on the image and hit "Copy image address"
 
-    It should copy an url like `https://i.imgur.com/abcdefgh.png`
+    It should copy an URL like `https://i.imgur.com/abcdefgh.png`
 
     ![Copy link from uploaded image](/assets/imgur/copy-link.png)
 
-    That's it! you can now set the skin by using your **imgur** url!
+    That's it! You can now set the skin by using your **imgur** URL!
+    The command to set the skin is `/skin url "<url>"`.
+    Make sure the URL is in quotes.
 </Steps>
