--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -16,7 +16,7 @@ You don't need a permission plugin to control commands for your players, with Sk
 
 So, what is it in for you?
 
-* Custom skins!, generate a skin for yourself (/skin url) or for the entire server (/sr createcustom)!
+* Custom skins!, generate a skin for yourself (`/skin url "<url>"`) or for the entire server (`/sr createcustom`)!
 * Skins will always work, even if you have no internet or when Mojang is down!
 * You can get rid of Steve & Alex skins by changing them to your own default skins.
 * Instant skin change (no rejoin required)
