--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -168,7 +168,7 @@ export const RootComponent = () => {
                             </a>
                             <FeatureCard
                                 title="Use your own skin"
-                                description={<span>Use <code className="highlight-code">/skin url &lt;url&gt;</code> to use a skin from the internet!</span>}
+                                description={<span>Use <code className="highlight-code">/skin url "&lt;url&gt;"</code> to use a skin from the internet!</span>}
                                 icon={<PhotoIcon className="w-6 h-6 mx-auto my-2"/>}
                             />
                             <FeatureCard
