Add new common issues page

--- a/pages/docs/troubleshooting.mdx
+++ b/pages/docs/troubleshooting.mdx
@@ -1,5 +1,5 @@
 import {Cards} from "nextra/components";
-import {ComputerDesktopIcon, ExclamationTriangleIcon, FireIcon} from "@heroicons/react/24/solid";
+import {ComputerDesktopIcon, ExclamationTriangleIcon, FireIcon, LifebuoyIcon} from "@heroicons/react/24/solid";
 
 # Fixing issues with SkinsRestorer
 
@@ -10,14 +10,22 @@ SkinsRestorer may sometimes have issues working properly, it is important to kno
 In these sections, you can read on different ways to troubleshoot issues with SkinsRestorer.
 
 <Cards>
-    <Cards.Card
-        icon={
-            <FireIcon/>
-        }
-        title="Firewall"
-        href="/docs/troubleshooting/firewall"
-    >
-    </Cards.Card>
+  <Cards.Card
+    icon={
+      <LifebuoyIcon/>
+    }
+    title="Common issues"
+    href="/docs/troubleshooting/common-issues"
+  >
+  </Cards.Card>
+  <Cards.Card
+    icon={
+      <FireIcon/>
+    }
+    title="Firewall"
+    href="/docs/troubleshooting/firewall"
+  >
+  </Cards.Card>
     <Cards.Card
         icon={
             <ExclamationTriangleIcon/>
