Fix index pages not being found

--- a/content/configuration/index.mdx
+++ b/content/configuration/index.mdx
@@ -1,3 +1,7 @@
+---
+asIndexPage: true
+---
+
 import {Cards} from "nextra/components";
 import {ChatBubbleLeftEllipsisIcon, Cog6ToothIcon, CommandLineIcon} from "@heroicons/react/24/solid";
 
