--- a/content/troubleshooting/index.mdx
+++ b/content/troubleshooting/index.mdx
@@ -1,3 +1,7 @@
+---
+asIndexPage: true
+---
+
 import {Cards} from "nextra/components";
 import {ComputerDesktopIcon, ExclamationTriangleIcon, FireIcon, LifebuoyIcon} from "@heroicons/react/24/solid";
 
