Add tab about never wanting to update

--- a/app/docs/configuration/auto-update/page.mdx
+++ b/app/docs/configuration/auto-update/page.mdx
@@ -45,6 +45,9 @@ Reasons why you think you should turn it off:
     We ensure that the updates are secure and tested before we release them.
 - You want to manually update SkinsRestorer:
   - You don't need to manually update SkinsRestorer, we do it for you. You will also be messaged in-game when an update is available.
+- You never want SkinsRestorer to be updated:
+  - We only provide support for the latest version of the plugin. If you're not on the latest version, we will ask you to update.
+    We do not have the resources to support older versions.
 - You're against auto-updates:
   - We make it intentionally hard to turn off auto-updates because we want to ensure that you always have the latest version of the plugin.
     We do not have the resources to help someone without the latest version. We have a strict policy on this.
