Add auto update card

--- a/app/docs/configuration/page.mdx
+++ b/app/docs/configuration/page.mdx
@@ -3,7 +3,7 @@ asIndexPage: true
 ---
 
 import {Cards} from "nextra/components";
-import {ChatBubbleLeftEllipsisIcon, Cog6ToothIcon, CommandLineIcon} from "@heroicons/react/24/solid";
+import {ArrowPathIcon, ChatBubbleLeftEllipsisIcon, Cog6ToothIcon, CommandLineIcon} from "@heroicons/react/24/solid";
 
 # Setting up SkinsRestorer
 
@@ -36,6 +36,14 @@ In these sections, you can read on the different aspects of the SkinsRestorer co
         }
         title="Locale and Translations"
         href="/docs/configuration/locale-translations"
+    >
+    </Cards.Card>
+    <Cards.Card
+        icon={
+            <ArrowPathIcon/>
+        }
+        title="Auto update"
+        href="/docs/configuration/auto-update"
     >
     </Cards.Card>
 </Cards>
