Add skin edit page

--- a/app/docs/features/page.mdx
+++ b/app/docs/features/page.mdx
@@ -5,6 +5,7 @@ asIndexPage: true
 import {Cards} from "nextra/components";
 import {
     GlobeAltIcon,
+    PaintBrushIcon,
     PhotoIcon,
     UserIcon
 } from "@heroicons/react/24/solid";
@@ -32,6 +33,14 @@ In these sections, you can on different aspects of SkinsRestorer and how to use 
         }
         title="Skin URL"
         href="/docs/features/skin-url"
+    >
+    </Cards.Card>
+    <Cards.Card
+        icon={
+            <PaintBrushIcon/>
+        }
+        title="Skin Edit"
+        href="/docs/features/skin-edit"
     >
     </Cards.Card>
     <Cards.Card
