Update SpigotMC links to Modrinth links

--- a/app/docs/installation/bukkit/page.mdx
+++ b/app/docs/installation/bukkit/page.mdx
@@ -15,7 +15,7 @@ In this section, you can read how to set up SkinsRestorer on your Bukkit/Spigot/
 
 <Steps>
     ### Download the plugin
-    Download the latest version from [SpigotMC](https://www.spigotmc.org/resources/skinsrestorer.2124/)
+    Download the latest version from [Modrinth](https://modrinth.com/plugin/skinsrestorer)
 
     ### Put it in the plugins folder
     Place the `SkinsRestorer.jar` file in the `plugins` folder.
