--- a/app/docs/installation/velocity/page.mdx
+++ b/app/docs/installation/velocity/page.mdx
@@ -19,7 +19,7 @@ In this section, you can read how to set up SkinsRestorer on your Velocity proxy
 
 <Steps>
     ### Download the plugin
-    Download the latest version from [SpigotMC](https://www.spigotmc.org/resources/skinsrestorer.2124/)
+    Download the latest version from [Modrinth](https://modrinth.com/plugin/skinsrestorer)
 
     ### Put it in the Velocity folder
     Place the `SkinsRestorer.jar` in the `plugins` folder of the **Velocity proxy**.
