--- a/app/docs/installation/bungeecord/page.mdx
+++ b/app/docs/installation/bungeecord/page.mdx
@@ -20,7 +20,7 @@ In this section, you can read how to set up SkinsRestorer on your BungeeCord pro
 
 <Steps>
     ### Download the plugin
-    Download the latest version from [SpigotMC](https://www.spigotmc.org/resources/skinsrestorer.2124/)
+    Download the latest version from [Modrinth](https://modrinth.com/plugin/skinsrestorer)
 
     ### Put it in the BungeeCord folder
     Place the `SkinsRestorer.jar` in the `plugins` folder of the **BungeeCord proxy**.
